src/css/style.css
/**
 * Hummingboard
 * Simple but elegant Hummingbird stats page
 *
 * Written and copyrighted 2013+
 * by Sven Marc 'CybroX' Gehring
 *
 * Licensed under CC BY-SA 3.0
 * For additional informations, please read the
 * LICENSE.md file or the license deed at the
 * Creative Commons website.
 */

@font-face {font-family: 'Ubuntu-Regular'; src: url('../font/ubuntu-regular-webfont.woff') format('woff'); font-weight: normal; font-style: normal;}
@font-face {font-family: 'Ubuntu-Medium'; src: url('../font/ubuntu-medium-webfont.woff') format('woff'); font-weight: normal; font-style: normal;}
@font-face {font-family: 'Ubuntu-Bold'; src: url('../font/ubuntu-bold-webfont.woff') format('woff'); font-weight: normal; font-style: normal;}

* {font-family: Ubuntu-Regular;}
a {text-decoration: none;}

body {
	margin: 0;
	padding: 0;
	overflow: hidden;
	background: url('../img/background.png') left top repeat #999;
}


#landingInfo {
	position: absolute;
	text-align:center;
	top: 50%;
	left: 25%;
	width: 50%;
	height: 300px;
	margin-top: -150px;
}

#landingTitle {
	margin: 0;
	padding: 0;
	color: #bbb;
	font-size: 4em;
	text-align: center;
	text-shadow: 0 -1px 1px #999;
	-moz-text-shadow: 0 -1px 1px #999;
	-webkit-text-shadow: 0 -1px 1px #999;
}

#landingSubline {
	margin: 0;
	padding: 0;
	display: inline-block;
	color: #aaa;
}

#landingForm {
	padding: 30px 0;
}

#landingInput, #landingSubmit {
	padding: 10px 20px;
	background: #ddd;
	outline: 0 !important;
	font-family: Ubuntu-Medium;
}

#landingInput {
	width: 40%;
	border: 1px solid #ddd;
	border-radius: 5px 0 0 5px;
	-moz-border-radius: 5px 0 0 5px;
	-webkit-border-radius: 5px 0 0 5px;
	box-shadow: inset 1px 1px 1px #999;
	-moz-box-shadow: inset 1px 1px 1px #999;
	-webkit-box-shadow: inset 1px 1px 1px #999;
}

#landingSubmit:hover{
	color: #666;
}
#landingInput:focus {
	color: #C85C1A;
}

#landingInput, #landingInput:focus, #landingSubmit, #landingSubmit:hover {
	transition: color 0.5s ease-in-out;
	-moz-transition: color 0.5s ease-in-out;
	-webkit-transition: color 0.5s ease-in-out;
}

#landingSubmit {
	color: #999;
	width: 20%;
	border: 1px solid #ccc;
	border-radius: 0 5px 5px 0;
	-moz-border-radius: 0 5px 5px 0;
	-webkit-border-radius: 0 5px 5px 0;
	box-shadow: 1px 1px 1px #999;
	-moz-box-shadow: 1px 1px 1px #999;
	-webkit-box-shadow: 1px 1px 1px #999;
}

#landingSubmit:hover {
	cursor: pointer;
}

#copyright {
	display: inline-block;
	width: 100%;
	position: absolute;
	left: 0;
	bottom: 0;
	color: #888;
	text-align: center;
	opacity: 0.5;
}

#copyright a { color: #C85C1A }

#copyright:hover { opacity: 1; }

#headContainer {
	width: 96%;
	height: 100px;
	margin-top: -100px;
	padding: 0 2%;
	background: #fff;
	box-shadow: 1px 0px 2px #999;
	-moz-box-shadow: 1px 0px 2px #999;
	-webkit-box-shadow: 1px 0px 2px #999;
	transition: margin-top 0.4s ease-in-out;
	-moz-transition: margin-top 0.4s ease-in-out;
	-webkit-transition: margin-top 0.4s ease-in-out;
}

#headline {
	width: 100%;
	height: 100%;
}

.headpart {
	width: 50%;
	height: 100%;
	float: left;
}

#userimage {
	display: block;
	float: left;
	height: 100%;
	padding: 0 15px 0 0;
	margin: 0 20px 0 0;
	border-right: 1px solid #EBEBEB;
}

#useravatar {
	height: 70%;
	background: #999;
	margin: 15px 0;
	opacity: 0.7;
}

#useravatar:hover {opacity: 1;}

#useravatar, #useravatar:hover, #copyright, #copyright:hover{
	transition: opacity 0.4s ease-in-out;
	-moz-transition: opacity 0.4s ease-in-out;
	-webkit-transition: opacity 0.4s ease-in-out;
}

#userfont {
	display: inline-block;
	padding-top: 15px;
	font-size: 3em;
	color: #999;
}

#userfont:hover {color: #ff8247;}
#userfont:hover, #userfont {
	transition: color 0.3s ease-in-out;
	-moz-transition: color 0.3s ease-in-out;
	-webkit-transition: color 0.3s ease-in-out;
}

#detailsContainer {
	width: 100%;
	padding-top: 15px;
	font-size: 2em;
	text-align: right;
}

#anitime {
	display: block;
	color: #999;
	font-size: 0.5em;
}

.divid {color: #FAFAFA;}
.descr {color: #BBBBBB;}
.anime {color: hsla(19, 100%, 64%, .7);}
.episd {color: hsla(225, 83%, 60%, .5);}

.anime, .episd {
	font-family: Ubuntu-Medium, Arial;
	text-shadow: -1px 0 6px #fff, 0 0 #000, 1px 1px #fff;
	-moz-text-shadow: -1px 0 6px #fff, 0 0 #000, 1px 1px #fff;
	-webkit-text-shadow: -1px 0 6px #fff, 0 0 #000, 1px 1px #fff;
}

#statsPage, #landingPage {
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
}

#landingPage {
	display: none;
	position: fixed;
	top: 0;
}

#statsContainer {
	position: absolute;
	left: 0;
	top: 100px;
	width: 100%;
	height: 90%;
	height: calc(100% - 100px);
	top: 100px;
	z-index: 20;
}

#statsUpper, #statsLower {
	width: 100%;
	height: 47%;
}

#statsMiddle {
	width: 100%;
	height: 6%;
}

#statsUpper, #statsMiddle {
	box-shadow: 0px 1px 0 #666;
	-moz-box-shadow: 0px 1px 0 #666;
	-webkit-box-shadow: 0px 1px 0 #666;
}

#statsState {width: 30%;}
#statsRates {width: 50%;}
#statsTypes {width: 20%;}

#statsState, #statsRates, #statsTypes {
	height: 100%;
	float: left;
}

.title {
	height: 20%;
	margin-top: 1px; //<-- 'cause used box shadow
}

.title > h2 {
	color: #666;
	text-align:center;
	margin: 0;
	padding: 10px 0 0 0;
}

.graph {
	width: 80%;
	height: 80%;
	margin: 0 10% 0 10%;
	padding: 13px 0 0 0;
}

.orangeBar {
	background: #ff8247;
	background: -moz-linear-gradient(top,  #ff8247 0%, #f47044 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ff8247), color-stop(100%,#f47044));
	background: -webkit-linear-gradient(top,  #ff8247 0%,#f47044 100%);
	background: -o-linear-gradient(top,  #ff8247 0%,#f47044 100%);
	background: -ms-linear-gradient(top,  #ff8247 0%,#f47044 100%);
	background: linear-gradient(to bottom,  #ff8247 0%,#f47044 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff8247', endColorstr='#f47044',GradientType=0 );
}

.blueBar {
	background: rgb(67,110,238);
	background: -moz-linear-gradient(top,  rgba(67,110,238,1) 0%, rgba(55,68,186,1) 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(67,110,238,1)), color-stop(100%,rgba(55,68,186,1)));
	background: -webkit-linear-gradient(top,  rgba(67,110,238,1) 0%,rgba(55,68,186,1) 100%);
	background: -o-linear-gradient(top,  rgba(67,110,238,1) 0%,rgba(55,68,186,1) 100%);
	background: -ms-linear-gradient(top,  rgba(67,110,238,1) 0%,rgba(55,68,186,1) 100%);
	background: linear-gradient(to bottom,  rgba(67,110,238,1) 0%,rgba(55,68,186,1) 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#436eee', endColorstr='#3744ba',GradientType=0 );
}

.graph > div:hover {
	position: relative;
	z-index: 90;
	cursor: pointer;
}

.graphLabelgraphState, .graphLabelgraphRates, .graphLabelgraphTypes {font-size: 11px;}
.graphValuegraphState, .graphValuegraphRates, .graphValuegraphTypes {font-size: 11px; color: #666;}
.subBarsgraphState span, .subBarsgraphRates span {
	display: block;
	margin: -14px 0 0 0;
	font-size: 11px;
	color: #666;
}

.break {clear: both;}

.graphVal, .graphDes {
	font-size: 11px;
	color: #666;
}

#loader {
	display: none;
	width: 75px;
	height: 75px;
	position: absolute; 
	left: 50%;
	top: 50%;
	margin: -37px 0 0 -37px;
	
}

#loader div {
	width: 15px;
	height: 15px;
	margin: 5px;
	float: left;
	background: rgba(0,0,0,0);
}

#loader div:not(:nth-of-type(5)){
	animation: loaderBlink 2.5s linear infinite;
	-webkit-animation: loaderBlink 2.5s linear infinite;
}

#loader div:nth-of-type(5) {
	background: #1C86EE;
	animation: loaderSpin 2.5s linear infinite;
	-webkit-animation: loaderSpin 2.5s linear infinite;
}

@keyframes loaderBlink {
	0%   {background: rgba(0,0,0,0.1);}
	45%  {background: rgba(0,0,0,0);  }
	100% {background: rgba(0,0,0,0.1);}
}
@-webkit-keyframes loaderBlink {
	0%   {background: rgba(0,0,0,0.1);}
	45%  {background: rgba(0,0,0,0);  }
	100% {background: rgba(0,0,0,0.1);}
}

@keyframes loaderSpin {
	0%   {-webkit-border-radius: 0px; -webkit-transform: rotate(0deg);  }
	45%  {-webkit-border-radius: 6px;                                   }
	100% {-webkit-border-radius: 0px; -webkit-transform: rotate(360deg);}
}
@-webkit-keyframes loaderSpin {
	0%   {-webkit-border-radius: 0px; -webkit-transform: rotate(0deg);  }
	45%  {-webkit-border-radius: 6px;                                   }
	100% {-webkit-border-radius: 0px; -webkit-transform: rotate(360deg);}
}

